overflow fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,9 +54,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 html {
-  // overflow: hidden;
   color: var(--primary-color);
   background-color: var(--background-color);
+}
+body {
+  width: 100%;
+  overflow: scroll;
 }
 
 #app {
